monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/InterfaceWithoutImplementation3.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar InterfaceWithoutImplementation3 {

    interface A;
    interface D extends A;

    X implements D = "x";
    Y = D;
}