monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4029/A4029.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4029;

grammar A4029 {
  A;

  B extends A astextends C;

}
